--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
 
 <style>
 :root {
-    --bg-color: #fff0f6;
     --primary: #ff8fab;
+    --bg: #fff0f6;
     --text: #5d4037;
 }
 
 body {
-    background-color: var(--bg-color);
+    margin: 0;
+    padding: 20px;
+    font-family: 'Gaegu', cursive;
+    background-color: var(--bg);
     background-image:
         linear-gradient(#ffd6e0 1px, transparent 1px),
         linear-gradient(90deg, #ffd6e0 1px, transparent 1px);
     background-size: 28px 28px;
-    font-family: 'Gaegu', cursive;
-    color: var(--text);
-    margin: 0;
-    padding: 20px;
     display: flex;
     justify-content: center;
 }
@@ -31,19 +30,19 @@ body {
 .container {
     width: 100%;
     max-width: 400px;
-    background: rgba(255,255,255,0.85);
-    padding: 20px;
+    background: rgba(255,255,255,0.9);
     border-radius: 18px;
     border: 3px solid #000;
     box-shadow: 10px 10px 0 #000;
-    text-align: center;
+    padding: 20px;
     position: relative;
+    text-align: center;
 }
 
-/* Judul */
+/* Title */
 h1 {
-    font-size: 2.8rem;
-    margin: 10px 0 0;
+    font-size: 2.7rem;
+    margin: 5px 0;
     text-shadow: 3px 3px 0 #ffc2d1;
 }
 
@@ -52,20 +51,32 @@ h1 {
     margin-bottom: 10px;
 }
 
-/* Polaroid */
+/* Gallery */
+.gallery {
+    display: flex;
+    gap: 15px;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    padding-bottom: 10px;
+}
+
+.gallery::-webkit-scrollbar {
+    display: none;
+}
+
 .polaroid {
-    background: white;
+    flex: 0 0 80%;
+    scroll-snap-align: center;
+    background: #fff;
     padding: 15px 15px 45px;
     border: 2px solid #000;
-    margin: 20px auto;
-    width: 85%;
-    transform: rotate(2deg);
     box-shadow: 5px 5px 0 rgba(0,0,0,0.2);
+    transform: rotate(2deg);
 }
 
 .polaroid img {
     width: 100%;
-    border-radius: 5px;
+    border-radius: 6px;
 }
 
 .caption {
@@ -73,21 +84,20 @@ h1 {
     font-weight: bold;
 }
 
-/* Musik */
+/* Music */
 .music-player {
+    margin: 15px auto;
     background: #000;
     color: #fff;
     padding: 10px 18px;
     border-radius: 30px;
     display: inline-flex;
-    align-items: center;
     gap: 8px;
     cursor: pointer;
-    box-shadow: 5px 5px 0 #999;
-    margin: 15px 0;
+    box-shadow: 5px 5px 0 #888;
 }
 
-/* Pesan */
+/* Message */
 .message-box {
     background: #fff0f5;
     border: 2px dashed var(--primary);
@@ -99,25 +109,21 @@ h1 {
     margin-top: 20px;
 }
 
-/* Sticker */
-.sticker {
-    position: absolute;
-    font-size: 2rem;
-    animation: float 3s ease-in-out infinite;
+/* Button */
+.btn {
+    display: inline-block;
+    margin-top: 20px;
+    background: var(--primary);
+    color: #fff;
+    padding: 10px 22px;
+    font-size: 1.4rem;
+    border-radius: 12px;
+    text-decoration: none;
+    border: 2px solid #000;
 }
 
-.st1 { top: -15px; left: -15px; }
-.st2 { bottom: -15px; right: -20px; animation-delay: 1s; }
-.st3 { top: 45%; right: -25px; animation-delay: 2s; }
-.st4 { bottom: 10%; left: -25px; animation-delay: .5s; }
-
-@keyframes float {
-    0%,100% { transform: translateY(0); }
-    50% { transform: translateY(-10px); }
-}
-
-/* Love jatuh */
-.love {
+/* Floating hearts */
+.heart {
     position: fixed;
     top: -10px;
     font-size: 20px;
@@ -130,97 +136,97 @@ h1 {
         opacity: 0;
     }
 }
-
-.btn-link {
-    display: inline-block;
-    margin-top: 20px;
-    background: var(--primary);
-    color: #fff;
-    padding: 10px 20px;
-    font-size: 1.4rem;
-    border-radius: 12px;
-    text-decoration: none;
-    border: 2px solid #000;
-}
 </style>
 </head>
 
 <body>
 
 <div class="container">
-    <div class="sticker st1">🎀</div>
-    <div class="sticker st2">✨</div>
-    <div class="sticker st3">🍰</div>
-    <div class="sticker st4">🧸</div>
 
-    <h1>Happy Birthday ♡</h1>
-    <div class="subtitle">To my favorite person 💕</div>
+<h1>Happy Birthday ♡</h1>
+<div class="subtitle">To my favorite person 💕</div>
 
+<!-- FOTO -->
+<div class="gallery">
     <div class="polaroid">
         <img src="foto1.jpg">
-        <div class="caption">Me & You ✨</div>
+        <div class="caption">Your smile ✨</div>
     </div>
 
-    <div class="music-player" onclick="toggleMusic()">
-        <span id="play-icon">▶️</span>
-        <span id="music-text">Play Our Song</span>
+    <div class="polaroid">
+        <img src="foto2.jpg">
+        <div class="caption">Me & You 💖</div>
     </div>
 
-    <audio id="bg-music" loop>
-        <source src="lagu.mp3" type="audio/mpeg">
-    </audio>
-
-    <div class="message-box">
-        Hai sayang 🤍<br><br>
-
-        Happy birthday yaaa 🎂  
-        I’m so grateful to have you in my life.  
-        Thank you for being you — the cutest, sweetest,
-        and most precious person ever 🥺💕
-
-        <br><br>
-        Semoga kamu selalu sehat, bahagia,
-        dan semua mimpi kamu pelan-pelan jadi nyata ✨  
-        Aku bakal selalu ada di samping kamu,
-        today, tomorrow, and forever 💖
-
-        <br><br>
-        <b>I love you so much ♡</b>
+    <div class="polaroid">
+        <img src="foto3.jpg">
+        <div class="caption">My happiness 🤍</div>
     </div>
+</div>
 
-    <a href="https://wa.me/628xxxxxxxxxx" class="btn-link">Chat Aku 💬</a>
+<!-- MUSIC -->
+<div class="music-player" onclick="toggleMusic()">
+    <span id="icon">▶️</span>
+    <span id="text">Play Our Song</span>
+</div>
+
+<audio id="music" loop>
+    <source src="lagu.mp3" type="audio/mpeg">
+</audio>
+
+<!-- MESSAGE -->
+<div class="message-box">
+    Hai sayang 🤍<br><br>
+
+    Happy birthday yaaa 🎂  
+    I’m so lucky to have you in my life.  
+    Thank you for being my safe place,
+    my happiness, and my favorite person 🥺💕
+
+    <br><br>
+    Semoga kamu selalu sehat, bahagia,
+    dan semua mimpi kamu pelan-pelan tercapai ✨  
+    Aku bakal selalu ada buat kamu —
+    today, tomorrow, and always 💖
+
+    <br><br>
+    <b>I love you so much ♡</b>
+</div>
+
+<a href="https://wa.me/628xxxxxxxxxx" class="btn">Chat Aku 💬</a>
+
 </div>
 
 <script>
-var music = document.getElementById("bg-music");
-var icon = document.getElementById("play-icon");
-var text = document.getElementById("music-text");
-var isPlaying = false;
+var music = document.getElementById("music");
+var icon = document.getElementById("icon");
+var text = document.getElementById("text");
+var play = false;
 
-function toggleMusic(){
-    if(isPlaying){
+function toggleMusic() {
+    if(play){
         music.pause();
         icon.innerHTML = "▶️";
         text.innerHTML = "Play Our Song";
-        isPlaying = false;
+        play = false;
     } else {
         music.play();
         icon.innerHTML = "⏸️";
         text.innerHTML = "Now Playing...";
-        isPlaying = true;
+        play = true;
     }
 }
 
-// Love jatuh
+// Hearts fall
 setInterval(() => {
-    const love = document.createElement("div");
-    love.className = "love";
-    love.innerHTML = "💗";
-    love.style.left = Math.random() * 100 + "vw";
-    love.style.animationDuration = (3 + Math.random() * 3) + "s";
-    document.body.appendChild(love);
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerHTML = "💗";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.animationDuration = (3 + Math.random() * 3) + "s";
+    document.body.appendChild(heart);
 
-    setTimeout(() => love.remove(), 6000);
+    setTimeout(() => heart.remove(), 6000);
 }, 500);
 </script>
 
